--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
+  youtube_player_flutter: ^8.1.0
+  flutter_widget_from_html: ^0.8.5
+  fwfh_chewie: ^0.7.0+1
+  fwfh_webview: ^0.6.2+3
+  flutter_widget_from_html_core: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
