--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   fwfh_chewie: ^0.7.0+1
   fwfh_webview: ^0.6.2+3
   flutter_widget_from_html_core: ^0.8.5+3
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
